--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
 
         <activity
             android:name=".searchNumber.SearchNumberActivity"
-            android:exported="true"
-            android:configChanges="orientation|screenSize">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
