--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:exported="false" />
         <!--
  android:screenOrientation="portrait"
-                controlamos la horientación bloqueandola en vertical (portrait) o horizontal (landscape)
+                controlamos la orientación bloqueandola en vertical (portrait) o horizontal (landscape)
             android:configChanges="orientation|keyboard|screenSize"
                 le decimos que aunque salga el teclado, cambie tamaño pantalla no haga nada, que nosotros
                 lo controlaremos
