--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
-
         <activity
-            android:name=".searchNumber.SearchNumberActivity"
+            android:name=".creditos.CreditosActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
 
         <activity
+            android:name=".searchNumber.SearchNumberActivity"
+            android:exported="true"/>
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>-->
+
+
+        <activity
             android:name=".imc.ResultadoIMCActivity"
             android:exported="false" />
         <!--
-    android:screenOrientation="portrait"
+            android:screenOrientation="portrait"
                 controlamos la orientación bloqueandola en vertical (portrait) o horizontal (landscape)
             android:configChanges="orientation|keyboard|screenSize"
                 le decimos que aunque salga el teclado, cambie tamaño pantalla no haga nada, que nosotros
@@ -35,21 +46,22 @@
         -->
         <activity
             android:name=".imc.IMCActivity"
-            android:exported="true" />
-        <!--
-                    <intent-filter>
+            android:exported="false">
+
+            <!--
+                <intent-filter>
                         <action android:name="android.intent.action.MAIN" />
 
                         <category android:name="android.intent.category.LAUNCHER" />
-                    </intent-filter>
-                </activity>
-         -->
+                 </intent-filter>
+            -->
+        </activity>
         <activity
             android:name=".versiones.IMC_B_Activity"
             android:exported="false" />
         <activity
             android:name=".versiones.VersionesActivity"
             android:exported="false" />
-
     </application>
+
 </manifest>
