--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         tools:targetApi="31">
         <activity
             android:name=".creditos.CreditosActivity"
-            android:exported="true">
-            <intent-filter>
+            android:exported="false">
+        <!--    <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
 
@@ -46,22 +46,25 @@
         -->
         <activity
             android:name=".imc.IMCActivity"
-            android:exported="false">
-
-            <!--
+            android:exported="true">
                 <intent-filter>
                         <action android:name="android.intent.action.MAIN" />
 
                         <category android:name="android.intent.category.LAUNCHER" />
                  </intent-filter>
-            -->
         </activity>
+
+
         <activity
             android:name=".versiones.IMC_B_Activity"
             android:exported="false" />
+
+
         <activity
             android:name=".versiones.VersionesActivity"
             android:exported="false" />
+
+
     </application>
 
 </manifest>
