--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app se conecte.-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app acceder al estado de la red.-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,27 +20,40 @@
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
         <activity
-            android:name=".creditos.CreditosActivity"
-            android:exported="false">
-        <!--    <intent-filter>
+            android:name=".productos.ProductosActivity"
+            android:exported="true" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".creditos.CreditosActivity"
+            android:exported="false">
+
+            <!--
+                <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
         </activity>
 
 
         <activity
             android:name=".searchNumber.SearchNumberActivity"
-            android:exported="true"/>
-            <!--<intent-filter>
+            android:exported="true" />
+        <!--
+<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
-
-
+        </activity>
+        -->
         <activity
             android:name=".imc.ResultadoIMCActivity"
             android:exported="false" />
@@ -44,16 +64,17 @@
                 le decimos que aunque salga el teclado, cambie tamaño pantalla no haga nada, que nosotros
                 lo controlaremos
         -->
+
+
         <activity
             android:name=".imc.IMCActivity"
-            android:exported="true">
-                <intent-filter>
-                        <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
+        <!--    <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                        <category android:name="android.intent.category.LAUNCHER" />
-                 </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
         </activity>
-
 
         <activity
             android:name=".versiones.IMC_B_Activity"
@@ -63,8 +84,6 @@
         <activity
             android:name=".versiones.VersionesActivity"
             android:exported="false" />
-
-
     </application>
 
 </manifest>
