Clase Miércoles. RETROFIT JSON Creamos un recyclerView para mostras los datos adqueridos de la ApiWeb obtenidos usando Retrofit. Creamos Item_producto, Adapter, Holder y RecyclerView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
+
+
         <activity
             android:name=".productos.ProductosActivity"
             android:exported="true" >
@@ -45,7 +47,7 @@
 
         <activity
             android:name=".searchNumber.SearchNumberActivity"
-            android:exported="true" />
+            android:exported="false" />
         <!--
 <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
