--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app se conecte.-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app acceder al estado de la red.-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+    <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app se conecte. -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app acceder al estado de la red. -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,16 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
-
-
         <activity
-            android:name=".productos.ProductosActivity"
-            android:exported="true" >
+            android:name=".perros.PerrosActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".productos.ProductosActivity"
+            android:exported="false">
+            <!--
+                <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+
         </activity>
 
         <activity
@@ -43,8 +50,6 @@
             </intent-filter>
             -->
         </activity>
-
-
         <activity
             android:name=".searchNumber.SearchNumberActivity"
             android:exported="false" />
@@ -66,23 +71,21 @@
                 le decimos que aunque salga el teclado, cambie tamaño pantalla no haga nada, que nosotros
                 lo controlaremos
         -->
-
-
         <activity
             android:name=".imc.IMCActivity"
             android:exported="false">
-        <!--    <intent-filter>
+
+            <!--
+                <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
-
         <activity
             android:name=".versiones.IMC_B_Activity"
             android:exported="false" />
-
-
         <activity
             android:name=".versiones.VersionesActivity"
             android:exported="false" />
