--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
         <activity
+            android:name=".perros.GaleriaPerrosActivity"
+            android:exported="false" />
+        <activity
             android:name=".perros.PerrosActivity"
             android:exported="true">
             <intent-filter>
@@ -24,10 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".productos.ProductosActivity"
             android:exported="false">
+
             <!--
                 <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +40,6 @@
             -->
 
         </activity>
-
         <activity
             android:name=".creditos.CreditosActivity"
             android:exported="false">
