--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,54 +15,54 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
+
         <activity
             android:name=".perros.GaleriaPerrosActivity"
-            android:exported="false" />
+            android:exported="false">
+        </activity>
+
         <activity
             android:name=".perros.PerrosActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".productos.ProductosActivity"
             android:exported="false">
-
             <!--
-                <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
-
         </activity>
+
         <activity
             android:name=".creditos.CreditosActivity"
             android:exported="false">
-
             <!--
-                <intent-filter>
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+             </intent-filter>
             -->
         </activity>
+
         <activity
             android:name=".searchNumber.SearchNumberActivity"
             android:exported="false" />
         <!--
-<intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         -->
+
         <activity
             android:name=".imc.ResultadoIMCActivity"
             android:exported="false" />
@@ -73,24 +73,25 @@
                 le decimos que aunque salga el teclado, cambie tamaño pantalla no haga nada, que nosotros
                 lo controlaremos
         -->
+
         <activity
             android:name=".imc.IMCActivity"
             android:exported="false">
-
             <!--
                 <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
         </activity>
+
         <activity
             android:name=".versiones.IMC_B_Activity"
             android:exported="false" />
+
         <activity
             android:name=".versiones.VersionesActivity"
             android:exported="false" />
-    </application>
 
+    </application>
 </manifest>
