--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,30 +16,43 @@
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
         <activity
-            android:name=".fechayhora.SeleccionFechaYHoraActivity"
+            android:name=".MenuPrincipalActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
 
         <activity
-            android:name=".perros.GaleriaPerrosActivity"
+            android:name=".webview.WebActivityActivity"
             android:exported="false">
         </activity>
 
         <activity
+            android:name=".fechayhora.SeleccionFechaYHoraActivity"
+            android:exported="false"></activity>
+
+
+        <activity
+            android:name=".perros.GaleriaPerrosActivity"
+            android:exported="false"></activity>
+
+
+        <activity
             android:name=".perros.PerrosActivity"
             android:exported="false">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
-
         <activity
             android:name=".productos.ProductosActivity"
             android:exported="false">
@@ -54,6 +67,7 @@
         <activity
             android:name=".creditos.CreditosActivity"
             android:exported="false">
+
             <!--
              <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
