Clase Martes. Añadimos SCROLLVIEW en Productos Activity. Modificamos el xml poniendo como padre el scrollView pudiendo tener sólo un hijo directo. Añadimos textViews para mostrar abajo de todo los precios maximos, medio y mínimos. Añadí en strings variables para cambiar idioma de de los textos mostrados. Formatee los textos con los valores de forma distinta al profesor. Opción profesor queda comentada.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app acceder al estado de la red. -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- Este permiso es necesario declararlo en el que manifest para que android permita lanzar notificaciones. -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
