--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app se conecte. -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Este permiso es necesario declararlo en el que manifest para que android permita a mi app acceder al estado de la red. -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <!-- Este permiso es necesario declararlo en el que manifest para que android permita lanzar notificaciones. -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Este permiso es necesario declararlo en el que manifest para que android permita lanzar notificaciones. -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -18,6 +17,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <!-- Aquí tenemos que meter la clave que nos den. Creada en local.properties-->
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${CLAVE_GOOGLEMAPS}" />
+
+        <activity
+            android:name=".mapa.MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
         <activity
             android:name=".tabs.TabsActivity"
             android:exported="false" />
