--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.CntgApp"
         tools:targetApi="31">
         <activity
+            android:name=".realtimedatabase.ListarClientesActivity"
+            android:exported="false" />
+        <activity
             android:name=".realtimedatabase.InsertarClientesActivity"
             android:exported="false" />
         <activity
@@ -68,7 +71,7 @@
             android:exported="false" />
         <activity
             android:name=".MenuPrincipalActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".webview.WebActivity"
             android:exported="true"> <!-- esto significa que es exportable desde fuera, que sea visible para el ecosistema de android -->
